--- a/scss/app.scss
+++ b/scss/app.scss
@@ -48,9 +48,9 @@ header{
 	height: 600px;
 	width: 100%;
 	position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
+  top: 0;
+  left: 0;
+  z-index: 1;
 	color: $white;
 
 	h1{
@@ -61,27 +61,34 @@ header{
 
 section,
 footer{
-	background: $golf-wang;
+  background: $smoke;
 	text-align: center;
-	border-bottom: 1px solid darken($golf-wang, 8%);
+  border-bottom: 1px solid $base;
+  color: $black;
+  padding: 2rem 0;
+
+  ul{
+    list-style: none;
+    margin: 0;
+  }
+
+  .row{
+    //background: $white;
+    padding-bottom: 0.9375rem;
+    padding-top: 0.9375rem;
+  }
 }
 
 .content{
 	position: relative;
-    z-index: 10;
-    margin-top: 500px;
-    height: 100%;
-    width: 100%;
+  z-index: 10;
+  margin-top: 500px;
+  height: 100%;
+  width: 100%;
 }
 
-section,
-footer{
-	color: $black;
-	padding: 5rem 0;
-	ul{
-		list-style: none;
-		margin: 0;
-	}
+footer p{
+	font-size: 1rem;
 }
 
 /* 
